# rendr

./: .gitignore  README.md  start-dev.ps1
rendr-api/: .env.example  .gitignore  PIPELINE.md  pyproject.toml  rendr.db  rendr.db-shm  rendr.db-wal
rendr-api/rendr_api/: README.md  config.py  dependencies.py  main.py
rendr-api/rendr_api/models/: requests.py  responses.py  state.py
rendr-api/rendr_api/routers/: edit.py  health.py  params.py  projects.py  render.py
rendr-api/rendr_api/services/: database.py  llm.py  openscad.py  parameters.py  pipeline.py  postprocess.py  prompts.py  retrieval.py  review_agent.py
rendr-app/: electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json
rendr-app/src/main/: index.ts
rendr-app/src/preload/: index.d.ts  index.ts
rendr-app/src/renderer/: index.html
rendr-app/src/renderer/src/: App.tsx  index.css
rendr-app/src/renderer/src/components/chat/: ChatPanel.tsx
rendr-app/src/renderer/src/components/dimensions/: DimensionsPanel.tsx
rendr-app/src/renderer/src/components/icons/: CubeLogo.tsx
rendr-app/src/renderer/src/components/layout/: ActivityBar.tsx  AppShell.tsx  MainLayout.tsx  (+3 more)
rendr-app/src/renderer/src/contexts/: ChatContext.tsx  MeshAnalyticsContext.tsx  ProjectContext.tsx
rendr-app/src/renderer/src/hooks/: useBackendHealth.ts  useEditStream.ts  useRender.ts
rendr-app/src/renderer/src/lib/: api.ts  empty-module.ts  meshAnalytics.ts  openscad.ts
rendr-app/src/renderer/src/types/: index.ts
rendr-app/src/renderer/src/workers/: openscad.worker.ts
(+17 files in other folders)
