[project]
name = "rendr-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "litellm>=1.60",
    "railtracks",
    "httpx>=0.28",
    "aiosqlite>=0.20",
]
